@@ -1,3 +1,9 @@
+2009-09-07  Kevin Ollivier  <kevino@theolliviers.com>
+
+        wx build fixes for wx SVN trunk.
+
+        * wx/build/settings.py:
+
 2009-09-04  Kevin Ollivier  <kevino@theolliviers.com>
 
         wx build fix. Switch USE_ defines over to the compiler so that they can be
